# Cse471

./: .gitignore  README.md  Untitled document.docx  app.py  pyproject.toml  requirements.txt
client/: package-lock.json  package.json  tailwind.config.js  vercel.json
client/app/: globals.css  layout.jsx  page.jsx
client/app/dashboard/admin/: page.jsx
client/app/dashboard/guide/: page.jsx
client/app/dashboard/user/: page.jsx
client/app/login/: page.jsx
client/app/pricing/: page.jsx
client/app/register/: page.jsx
client/app/tours/: page.jsx
client/app/tours/[id]/: page.jsx
client/components/: FilterBar.jsx  Footer.jsx  Navbar.jsx  TourCard.jsx
client/legacy_src/: App.jsx
client/legacy_src/components/: FilterBar.jsx  Footer.jsx  Navbar.jsx  TourCard.jsx
client/legacy_src/pages/: DashboardAdmin.jsx  DashboardGuide.jsx  DashboardUser.jsx  Home.jsx  Login.jsx  NotFound.jsx  Register.jsx  TourDetail.jsx  Tours.jsx
client/legacy_src/styles/: index.css
client/lib/: api.js
client/public/: lalbagh-fort.avif
flask_api/: .env.example  __init__.py  app.py  pyproject.toml  requirements.txt
flask_api/api/: index.py
server/: .env.example  package-lock.json  package.json
server/src/: app.js  index.js  seed.js
server/src/config/: db.js
server/src/middleware/: auth.js  roles.js
server/src/models/: Booking.js  Review.js  Tour.js  User.js
server/src/routes/: admin.js  auth.js  bookings.js  reviews.js  tours.js
