[project]
name = "cse471-vercel-flask-api"
version = "0.1.0"
description = "Flask API deployment target for Vercel"
requires-python = ">=3.11"
dependencies = [
  "Flask==3.0.3",
  "flask-cors==4.0.1",
  "pymongo==4.8.0",
  "bcrypt==4.2.0",
  "PyJWT==2.9.0",
  "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flask_api"]
